@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-13T00:38:21Z",
+  "timestamp" : "2022-08-13T08:10:13Z",
   "count_outdated" : 1803,
   "uniques_outdated" : 125,
-  "count" : 1896,
-  "uniques" : 134,
+  "count" : 1898,
+  "uniques" : 135,
   "views" : [
     {
       "timestamp": "2022-08-01T00:00:00Z",
@@ -60,6 +60,13 @@
       "count_minmax": [ 1, 24 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-08-13T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
