@@ -1,5 +1,5 @@
 {
-  "count": 93,
+  "count": 95,
   "uniques": 3,
   "views": [
     {
@@ -41,6 +41,11 @@
       "timestamp": "2022-08-12T00:00:00Z",
       "count": 24,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-08-13T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
